samples/negative/resources/fp34/15.woff2
version https://git-lfs.github.com/spec/v1
oid sha256:ef9f63cdc88ca865d9dd8e3071aa1600ab2e7657c5e47f6d3047dafd3e101313
size 26608
